# rvsv

./: .gitmodules  CMakeLists.txt  README.md  instructions-breakdown.md
.github/workflows/: CI.yml
systemverilog/: execute_stage.sv  execute_stage_tb.sv  fetch.sv  fetch_stage.sv  function_codes.sv  inst_mem.sv  memory.sv  memory_tb.sv  memory_tb_pattern.txt  opcodes.sv  operations.sv  program_counter.sv  reg_file.sv  riscv_instr.sv  rv32i_pipe.sv  rv32i_pipe_tb.sv  rv32i_seq.sv  rv32i_seq_tb.sv  top_fetch_stage.sv
testsuits/: CMakeLists.txt  execute_stage_testsuit.cpp  fetch_stage_testsuit.cpp  fetch_testsuit.cpp  inst_mem_testsuit.cpp  memory_testsuit.cpp  reg_file_testsuit.cpp  rv32i_pipe_testsuit.cpp  rv32i_seq_testsuit.cpp
testsuits/asm_tests/: fibonacci.asm
